--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,6 @@
+@import '../node_modules/reset-css/sass/reset';
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@300;500;600;700&display=swap');
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
